--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,10 @@
-.weather-app {
+.card {
   max-width: 600px;
   margin: 30px 0 auto;
+  padding: 10px;
+}
+#city-name {
+  font-family: "Cormorant Garamond", serif;
+  font-size: 40px;
+  text-align: center;
 }
