--- a/src/style.css
+++ b/src/style.css
@@ -63,6 +63,6 @@
 #temp-number {
   font-size: 70px;
 }
-#description {
-  text-transform: capitalize;
+#description::first-letter {
+  text-transform: uppercase;
 }
