--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,21 @@
+button {
+  padding: 6px 9px;
+  border-radius: 5px;
+  background-color: rgb(144, 29, 169);
+  color: #fff;
+  border: rgb(144, 29, 169);
+  box-shadow: 5px 3px 4px 0px rgba(0, 0, 0, 0.2);
+}
 .card {
   max-width: 375px;
   margin: 30px 0 auto;
   padding: 10px;
+  display: block;
+  background-color: rgba(255, 202, 244, 0.915);
+}
+.weather-app {
+  max-width: 375px;
+  margin: 0 auto;
   display: block;
 }
 .characteristics {
@@ -19,6 +33,11 @@
   text-decoration: none;
   cursor: default;
 }
+#units {
+  position: relative;
+  top: -34px;
+  font-size: 16px;
+}
 #submit-search {
   margin-right: 5px;
   margin-bottom: 25px;
@@ -29,7 +48,7 @@
   font-family: "Work Sans", sans-serif;
   font-size: 30px;
   text-align: center;
-  line-height: 1;
+  line-height: 33px;
 }
 #description {
   font-family: "Silkscreen", cursive;
@@ -53,8 +72,9 @@
   font-size: 45px;
 }
 #search-city-form {
-  margin-bottom: 0px;
-  display: inline;
+  display: block;
+  margin: 0 auto;
+  text-align: center;
 }
 #search-bar {
   margin-right: 5px;
