--- a/src/style.css
+++ b/src/style.css
@@ -45,6 +45,7 @@ button {
     rgb(255, 237, 216) 90%
   );
 }
+
 .gray {
   font-size: 13px;
 }
@@ -85,6 +86,9 @@ button {
   display: block;
   text-align: center;
   font-size: 45px;
+}
+#first-day-icon {
+  width: 30px;
 }
 #search-city-form {
   display: block;
